--- a/static/header.html
+++ b/static/header.html
@@ -3,6 +3,7 @@
     <div class="w-3/5 h-full flex justify-center items-center gap-x-4 text-xl">
         <a  href="/"          hx-get="/"          hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">Главная</a>
         <a  href="/preview"   hx-get="/preview"   hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">Текст + Кртиночки</a>
+        <a  href="/knowledge"   hx-get="/knowledge"   hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">База</a>
         <a  href="/struct">Структура</a>
         <a  href="/stand">Установка</a>
     </div>
