--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
     <title>Главная</title>
     <style>
         .bg-main{
-            background-image: url('/images/gg.jpg');
+            background-image: url('images/gg.jpg');
         }
     </style>
     <meta charset="UTF-8">
