--- a/static/preview.html
+++ b/static/preview.html
@@ -8,7 +8,7 @@
     <link href="/dist/output.css" rel="stylesheet">
     <style>
         .bg-main{
-            background-image: url('/images/gg.jpg');
+            background-image: url('images/gg.jpg');
         }
         .zoom {
             transition: transform .2s; /* Animation */
