--- a/static/preview.html
+++ b/static/preview.html
@@ -48,7 +48,7 @@
         </div>
         <div class="flex flex-col md:flex-row justify-between overflow-auto min-h-[200px]">
             <img src="./images/scheme.png" alt="украли схему, шакалы" class="w-full md:max-w-md zoom">
-            <div class="hidden-block">Картинка.</div>
+            <div class="hidden-block">Картинка. Если этот текст видно сразу, то стили htmx не подгрузил, жмем f5</div>
             <img src="./images/info_formula.png" alt="украли формулы, шизойды" class="w-full md:max-w-md zoom"/>
             <div class="hidden-block">Формулки.</div>
         </div>
