13 fix, last task add

--- a/static/data.html
+++ b/static/data.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <title>Главная</title>
+    <title>База</title>
     <link href="/dist/output.css" rel="stylesheet">
     <style>
         .bg-main{
