--- a/static/data_block/notFoundBlock.html
+++ b/static/data_block/notFoundBlock.html
@@ -1,5 +1,6 @@
 {{define "notFoundBlock"}}
 <div class="mx-4">
-    <p>{{ .}}</p>
+    <p>Запрос: {{ .Question}}</p>
+    <p>Ответ: {{ .Error}}</p>
 </div>
 {{end}}
