final change, cringe code fix

--- a/static/pages/index.html
+++ b/static/pages/index.html
@@ -4,7 +4,7 @@
     <title>Главная</title>
     <style>
         .bg-main{
-            background-image: url('images/gg.jpg');
+            background-image: url('../images/gg.jpg');
         }
     </style>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
     <link href="/dist/output.css" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
 </head>
-<header>{{template "header"}}</header>
+<header>{{template "headerBlock"}}</header>
 <body>
 <div class="bg-cover bg-main bg-center flex items-center flex-col max-h-screen" id="main">
 <div class="flex w-3/5 flex-col min-h-[calc(100vh-60px)] bg-white items-center max-h-[calc(100vh-60px)] overflow-auto">
