--- a/static/pages/water.html
+++ b/static/pages/water.html
@@ -7,7 +7,7 @@
 <!-- write your code here -->
 <script src="https://code.createjs.com/1.0.0/createjs.min.js"></script>
 
-	<script src="js/water.js"></script>
+	<script src="../js/water.js"></script>
 <script>
 var canvas, stage, exportRoot, anim_container, dom_overlay_container, fnStartAnimation;
 function init() {
@@ -56,6 +56,7 @@ function playSound(id, loop, offset) {
 	<div class="w-3/5 h-full flex justify-center items-center gap-x-4 text-xl">
 		<a  href="/">Главная</a>
 		<a  href="/preview">Текст + Кртиночки</a>
+		<a  href="/knowledge">База</a>
 		<a  href="/struct">Структура</a>
 		<a  href="/stand">Установка</a>
 
