--- a/static/data_block/headerBlock.html
+++ b/static/data_block/headerBlock.html
@@ -1,6 +1,6 @@
-{{define "header"}}
-<div class="flex w-screen h-[60px] bg-white border-b-2 border-gray-200 justify-center">
-    <div class="w-3/5 h-full flex justify-center items-center gap-x-4 text-xl">
+{{define "headerBlock"}}
+<div class="flex w-full h-[60px] bg-white border-b-2 border-gray-200 justify-center">
+    <div class=" h-full flex justify-center items-center gap-x-4 text-xl">
         <a href="/static" hx-get="/" hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">Главная</a>
         <a  href="/preview"   hx-get="/preview"   hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">Текст + Кртиночки</a>
         <a  href="/knowledge"   hx-get="/knowledge"   hx-replace-url="true" hx-target="#main" hx-select="#main" hx-swap="outerHTML">База</a>
