--- a/static/pages/data.html
+++ b/static/pages/data.html
@@ -25,7 +25,7 @@
     <title>Main</title>
     <script src="https://unpkg.com/htmx.org@1.9.2" integrity="sha384-L6OqL9pRWyyFU3+/bjdSri+iIphTN/bvYyM37tICVyOJkWZLpP2vGn6VUEXgzg6h" crossorigin="anonymous"></script>
 </head>
-<header>{{template "header"}}</header>
+<header>{{template "headerBlock"}}</header>
 <body>
 <div class="bg-cover bg-main bg-center flex items-center flex-col max-h-screen" id="main">
     <div class="flex w-3/5 flex-col min-h-[calc(100vh-60px)] mx-4 bg-white max-h-[calc(100vh-60px)] overflow-auto gap-y-4">
