--- a/static/pages/stand.html
+++ b/static/pages/stand.html
@@ -13,6 +13,7 @@
     <div class="w-3/5 h-full flex justify-center items-center gap-x-4 text-xl">
       <a  href="/" >Главная</a>
       <a  href="/preview">Текст + Кртиночки</a>
+      <a  href="/knowledge">База</a>
       <a  href="/struct">Структура</a>
       <a  href="/stand">Установка</a>
     </div>
